force-app/main/default/objects/Phenotype_Request__c/fields/Approval_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Request Approved</label>
    <type>Checkbox</type>
</CustomField>