force-app/main/default/objects/Phenotype_Request__c/fields/Approval_request_sent__c.field-meta.xml
<CustomField>
    <fullName>Approval_request_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval request sent</label>
    <type>Checkbox</type>
</CustomField>