force-app/main/default/objects/Phenotype_Request__c/fields/Related_RGC_Data_Assets__c.field-meta.xml
<CustomField>
    <fullName>Related_RGC_Data_Assets__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related RGC Data Assets</label>
    <referenceTo>RGC_Data_Assets__c</referenceTo>
    <relationshipLabel>Phenotype Requests</relationshipLabel>
    <relationshipName>Phenotype_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>